@@ -1,5 +1,12 @@
 2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/Text.pm (_convert),
+	* tp/Texinfo/Convert/Plaintext.pm (_convert),
+	* tp/Texinfo/Convert/HTML.pm (_convert_def_line_type):
+	Refer to 'def_parsed_hash' instead of 'def_args'.
+
+2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Common.pm (definition_arguments_content)
 	(definition_category): Refer to 'def_parsed_hash' instead
 	of 'def_args'.
